# glpwnme

./: .gitignore  README.md  payload.js  pyproject.toml  requirements.txt  shell.php  tables_glpi.sql
glpwnme/: __init__.py  __main__.py  input_reader.py
glpwnme/exploits/: exceptions.py  exploit.py  logger.py  metadatas.py  orchestrator.py  plugin_exploit.py  plugins_enum.py  privileges.py  requirements.py  sql_injection_mixin.py  update_sql_injection_mixin.py
glpwnme/exploits/implementations/: __init__.py  cve_2020_15175.py  cve_2022_31061.py  cve_2022_35914.py  cve_2023_41320.py  cve_2023_41323.py  cve_2023_41326.py  cve_2024_27937.py  cve_2024_29889.py  cve_2024_37148.py  cve_2024_37149.py  cve_2024_40638.py  cve_2024_50339.py  default_password_check.py  php_upload.py  template.py  unserialize_order_plugin.py
glpwnme/exploits/utils/: __init__.py  glpi_session.py  glpi_utils.py
